Remove the 'default' field, add a default value for  thumbnail image position

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,12 +25,6 @@ collections:
         required: false
         widget: "datetime"
 
-      - label: "Draft"
-        name: "draft"
-        required: false
-        widget: "boolean"
-        default: true
-
       - label: "Categories"
         name: "categories"
         required: false
@@ -56,6 +50,7 @@ collections:
         name: "thumbnailImagePosition"
         required: false
         widget: "select"
+        default: ["top"]
 
         options: ["left", "top", "right"]
       - label: "Thumbnail Image"
