--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -44,13 +44,13 @@ collections:
         name: "autoThumbnailImage"
         required: false
         widget: "boolean"
-        default: true
+        default: false
 
       - label: "Thumbnail Image Position"
         name: "thumbnailImagePosition"
         required: false
         widget: "select"
-        default: ["top"]
+        default: "top"
         options: ["left", "top", "right"]
         
       - label: "Thumbnail Image"
