--- a/config.toml
+++ b/config.toml
@@ -95,9 +95,21 @@ canonifyurls = true
   name = "Twitter"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-twitter\"></i>"
   url = "https://twitter.com/ragasirtahk"
+[[menu.links]]
+  weight = 4
+  identifier = "linkedin"
+  name = "LinkedIn"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-linkedin\"></i>"
+  url = "https://www.linkedin.com/in/ragasirtahk/"
 
 [[menu.misc]]
   weight = 1
+  identifier = "portfolio"
+  name = "Portfolio"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-address-card\"></i>"
+  url = "https://me.ragasirtahk.tk/"
+[[menu.misc]]
+  weight = 2
   identifier = "rss"
   name = "RSS"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-rss\"></i>"
