No more tracking :)

--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ defaultContentLanguage = "en-us"
 title = "The ragasirtahk Blog"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "the-ragasirtahk-blog"
-googleAnalytics = "UA-96539727-5"
+googleAnalytics = ""
 paginate = 7
 canonifyurls = true
 
